<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="80dp"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/floating_action_buttons"
                android:textSize="24sp"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/floating_action_buttons"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/material_button"
                android:textSize="24sp"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/material_button"
                android:padding="10dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/elevated_button"
                android:textAllCaps="false"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/unelevated_button"
                android:textAllCaps="false"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button"
                android:layout_margin="10dp"
                android:textAllCaps="false"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_icon_button"
                app:icon="@drawable/ic_add_24dp"
                app:iconPadding="8dp"
                android:layout_margin="10dp"
                android:textAllCaps="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/chips"
                android:textSize="24sp"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/chips"
                android:padding="10dp"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/entryChip"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Entry"
                app:chipIcon="@drawable/ic_add_24dp"
                android:layout_margin="10dp"/>


            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Filter"
                android:layout_margin="10dp"/>

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choice"
                android:layout_margin="10dp"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/actionChip"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/ic_add_24dp"
                android:text="Action"
                android:layout_margin="10dp"
                app:chipCornerRadius="2dp"
                app:chipStrokeColor="#ed1919"
                app:chipStrokeWidth="2dp"
                app:chipIconTint="@color/colorPrimary"
                app:rippleColor="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/checkboxes"
                android:textSize="24sp"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:useMaterialThemeColors="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/switches"
                android:textSize="24sp"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="true"
                app:useMaterialThemeColors="false"
                android:text="@string/switch_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/radio_buttons"
                android:textSize="24sp"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/first"
                android:orientation="vertical"
                app:useMaterialThemeColors="false">
                <RadioButton
                    android:id="@+id/first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_label"/>
                <RadioButton
                    android:id="@+id/second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_label"/>
            </RadioGroup>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/bottom_app_bars"
                android:textSize="24sp"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/bottom_app_bars"
                android:padding="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/material_card"
                android:textSize="24sp"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"/>

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:minHeight="200dp"
                app:cardCornerRadius="5dp"
                android:elevation="5dp"
                app:strokeWidth="5dp"
                app:strokeColor="@android:color/white">

                <include layout="@layout/material_card_view" />

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:navigationIcon="@drawable/ic_menu_24dp"
        android:backgroundTint="@color/BottomAppBarBackground"
        style="@style/Widget.MaterialComponents.BottomAppBar"
        app:hideOnScroll="true"
        app:fabAlignmentMode="center"
        app:fabCradleRoundedCornerRadius="4dp"
        app:fabCradleMargin="4dp"
        app:fabCradleVerticalOffset="0dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/bar"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        app:srcCompat="@drawable/ic_add_24dp"
        tools:ignore="VectorDrawableCompat" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>